Add more layouts

--- a/app/views/landscapings/new.html.erb
+++ b/app/views/landscapings/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New landscaping</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_landscapingtitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', landscapings_path %>
+<%= link_to t('back'), landscapings_path %>
