--- a/app/views/landsurveyors/new.html.erb
+++ b/app/views/landsurveyors/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New landsurveyor</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_landsurveyortitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', landsurveyors_path %>
+<%= link_to t('back'), landsurveyors_path %>
