--- a/app/views/landsurveyors/show.html.erb
+++ b/app/views/landsurveyors/show.html.erb
@@ -1,44 +1,54 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Company name:</strong>
-  <%= @landsurveyor.company_name %>
-</p>
+<div class="row">
+  <div class="col-md-6">
+    <div class="thumbnail">
+       <%= image_tag @landsurveyor.image.url %>
+       <br> 
+      <strong><%= @landsurveyor.company_name %></strong>
+      <br>
+      <br>
+      <strong><%= label_tag :nil, t('servicecompanywebsite') %></strong>  
+      <%= link_to @landsurveyor.company_website, @landsurveyor.company_website %><br>
+      
+      
+      <strong><%= label_tag :nil, t('companycontactname') %></strong>  
+     <%= @landsurveyor.contact_name %>
+     <br>
+      <strong><%= label_tag :nil, t('companyservicephone') %></strong> 
+     <%= @landsurveyor.company_phone %><br>
+     <strong><%= label_tag :nil, t('servicecompanyaddress') %></strong>  
+     <%= @landsurveyor.address %><br>
+      <strong><%= label_tag :nil, t('city') %></strong>  
+     <%= @landsurveyor.city %><br>
+     <strong><%= label_tag :nil, t('zipcode') %></strong>  
+     <%= @landsurveyor.zipcode %><br>
+    </div>
+     <br>
 
-<p>
-  <strong>Company description:</strong>
-  <%= @landsurveyor.company_description %>
-</p>
+  </div>
+  <div class="col-md-6">
+    <h5><strong><%= label_tag :nil, t('generalcompany') %></strong></h5>
+    <%= @landsurveyor.company_description %>
+  </div>
 
-<p>
-  <strong>Address:</strong>
-  <%= @landsurveyor.address %>
-</p>
+</div>
 
-<p>
-  <strong>City:</strong>
-  <%= @landsurveyor.city %>
-</p>
+  <div class ="col-md-12">
+    <div class= "center">
+   <strong><%= label_tag :nil, t('mapview') %></strong><br>
+   <br>
+<iframe
+  width="800"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAUOQ0h7ZYU56FuY9ziMMXURoIlHxC3pfY
+    &q=<%= @landsurveyor.address.parameterize %>">
+</iframe>
 
-<p>
-  <strong>Zipcode:</strong>
-  <%= @landsurveyor.zipcode %>
-</p>
+</div>
+<br>
+<br>  
+ </div>
 
-<p>
-  <strong>Contact name:</strong>
-  <%= @landsurveyor.contact_name %>
-</p>
-
-<p>
-  <strong>Company website:</strong>
-  <%= @landsurveyor.company_website %>
-</p>
-
-<p>
-  <strong>Company phone:</strong>
-  <%= @landsurveyor.company_phone %>
-</p>
-
-<%= link_to 'Edit', edit_landsurveyor_path(@landsurveyor) %> |
-<%= link_to 'Back', landsurveyors_path %>
+<%= link_to 'Edit', edit_landsurveyor_path(@landsurveyor), class: "btn btn-link" %> |
+<%= link_to t('back'), landsurveyors_path, class: "btn btn-link" %>
