--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -372,7 +372,7 @@
              <%= image_tag("landscaping.png", :size => "120x100", :alt => "Landscaping", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
             <p></p>
-            <%= link_to t('searchservices'), interiordesigners_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), landscapings_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -383,7 +383,7 @@
             </div>
              <%= image_tag("landsurveyors.png", :size => "120x100", :alt => "LandSurveyor", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), interiordesigners_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), landsurveyors_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -410,7 +410,7 @@
             </div>
               <%= image_tag("mortagagebrokers.png", :size => "120x100", :alt => "Mortgage", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), interiordesigners_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), mortgages_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -421,7 +421,7 @@
             </div>
              <%= image_tag("moldinspector.png", :size => "100x100", :alt => "Mortgage", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), interiordesigners_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), molds_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -531,7 +531,7 @@
             </div>
               <%= image_tag("realestatefirms.jpg", :size => "100x100", :alt => "Lawyers", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), lawyers_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
