--- a/app/views/subscriptions/edit.html.erb
+++ b/app/views/subscriptions/edit.html.erb
@@ -2,4 +2,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @subscription %> |
-<%= link_to 'Back', subscriptions_path %>
+<%= link_to t('back'), subscriptions_path %>
