--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -6,5 +6,5 @@
 <br>
 <%= render 'form' %>
 <div class="left">
-<%= link_to 'Back', subscriptions_path %>
+<%= link_to t('back'), subscriptions_path %>
 </div>
