--- a/app/views/interiordesigners/edit.html.erb
+++ b/app/views/interiordesigners/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing interiordesigner</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_interiordesignertitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @interiordesigner %> |
-<%= link_to 'Back', interiordesigners_path %>
+<%= link_to t('back'), interiordesigners_path %>
