--- a/app/views/interiordesigners/index.html.erb
+++ b/app/views/interiordesigners/index.html.erb
@@ -1,41 +1,56 @@
-<h1>Listing interiordesigners</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_interiordesignertitle_html') %>
+  
+ </div>
+ </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Company description</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Zipcode</th>
-      <th>Contact name</th>
-      <th>Company website</th>
-      <th>Company phone</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="left">
+  <%= t('searchservice_html') %>
+   <%= form_tag search_interiordesigners_path, method: :get do %>
+          <p>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
+        <br>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
+      </p>
+    </div>
+  <% end %>
 
-  <tbody>
-    <% @interiordesigners.each do |interiordesigner| %>
-      <tr>
-        <td><%= interiordesigner.company_name %></td>
-        <td><%= interiordesigner.company_description %></td>
-        <td><%= interiordesigner.address %></td>
-        <td><%= interiordesigner.city %></td>
-        <td><%= interiordesigner.zipcode %></td>
-        <td><%= interiordesigner.contact_name %></td>
-        <td><%= interiordesigner.company_website %></td>
-        <td><%= interiordesigner.company_phone %></td>
-        <td><%= interiordesigner.email %></td>
-        <td><%= link_to 'Show', interiordesigner %></td>
-        <td><%= link_to 'Edit', edit_interiordesigner_path(interiordesigner) %></td>
-        <td><%= link_to 'Destroy', interiordesigner, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="thumbnail">
+  <div class="center"> 
+    <div class="row">
+     <% @interiordesigners.each do |interiordesigner| %>
+      <div class="col-md-3">
+      <div class="thumbnail">
+        <%= link_to image_tag(interiordesigner.image.url), interiordesigner %>
+        <div class="caption">
+          <h4><strong><%= interiordesigner.company_name %></strong></h4>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
+            <%= link_to interiordesigner.company_website, interiordesigner.company_website %><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
+            <%= interiordesigner.company_phone %><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
+           <%= interiordesigner.address %><br> 
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= interiordesigner.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= interiordesigner.zipcode %><br>
+           <br>
+           
+           <td><%= link_to 'Show', interiordesigner, class: "btn btn-success" %></td>
+        
+        <td><%= link_to 'Edit', edit_interiordesigner_path(interiordesigner), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', interiordesigner, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
+
+  </div>
+</div> 
+
 
 <br>
+<br>
 
-<%= link_to 'New Interiordesigner', new_interiordesigner_path %>
+
+<%= link_to t('add_service'), new_interiordesigner_path, class: "btn btn-success" %>
