--- a/app/views/interiordesigners/new.html.erb
+++ b/app/views/interiordesigners/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New interiordesigner</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_interiordesignertitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', interiordesigners_path %>
+<%= link_to t('back'), interiordesigners_path %>
