--- a/app/views/landscapings/edit.html.erb
+++ b/app/views/landscapings/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing landscaping</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_landscapingtitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @landscaping %> |
-<%= link_to 'Back', landscapings_path %>
+<%= link_to t('back'), landscapings_path %>
