--- a/app/views/landscapings/index.html.erb
+++ b/app/views/landscapings/index.html.erb
@@ -1,39 +1,58 @@
-<h1>Listing landscapings</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_landscapingtitle_html') %>
+  
+ </div>
+ </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Company description</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Zipcode</th>
-      <th>Contact name</th>
-      <th>Company website</th>
-      <th>Company phone</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+ <div class="left">
+  <%= t('searchservice_html') %>
+   <%= form_tag search_landscapings_path, method: :get do %>
+          <p>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
+        <br>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
+      </p>
+    </div>
+  <% end %>
 
-  <tbody>
-    <% @landscapings.each do |landscaping| %>
-      <tr>
-        <td><%= landscaping.company_name %></td>
-        <td><%= landscaping.company_description %></td>
-        <td><%= landscaping.address %></td>
-        <td><%= landscaping.city %></td>
-        <td><%= landscaping.zipcode %></td>
-        <td><%= landscaping.contact_name %></td>
-        <td><%= landscaping.company_website %></td>
-        <td><%= landscaping.company_phone %></td>
-        <td><%= link_to 'Show', landscaping %></td>
-        <td><%= link_to 'Edit', edit_landscaping_path(landscaping) %></td>
-        <td><%= link_to 'Destroy', landscaping, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+
+<div class="thumbnail">
+  <div class="center"> 
+    <div class="row">
+     <% @landscapings.each do |landscaping| %>
+      <div class="col-md-3">
+      <div class="thumbnail">
+        <%= link_to image_tag(landscaping.image.url), landscaping %>
+        <div class="caption">
+          <h4><strong><%= landscaping.company_name %></strong></h4>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
+            <%= link_to landscaping.company_website, landscaping.company_website %><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
+            <%= landscaping.company_phone %><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
+           <%= landscaping.address %><br> 
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= landscaping.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= landscaping.zipcode %><br>
+           <br>
+           
+           <td><%= link_to 'Show', landscaping, class: "btn btn-success" %></td>
+        
+        <td><%= link_to 'Edit', edit_landscaping_path(landscaping), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', landscaping, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
+
+  </div>
+</div> 
+
 
 <br>
+<br>
 
-<%= link_to 'New Landscaping', new_landscaping_path %>
+
+<%= link_to t('add_service'), new_landscaping_path, class: "btn btn-success" %>
+
