--- a/app/views/landsurveyors/edit.html.erb
+++ b/app/views/landsurveyors/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing landsurveyor</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_landsurveyortitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @landsurveyor %> |
-<%= link_to 'Back', landsurveyors_path %>
+<%= link_to t('back'), landsurveyors_path %>
