--- a/app/views/landsurveyors/index.html.erb
+++ b/app/views/landsurveyors/index.html.erb
@@ -1,39 +1,59 @@
-<h1>Listing landsurveyors</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_landsurveyortitle_html') %>
+  
+ </div>
+ </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Company description</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Zipcode</th>
-      <th>Contact name</th>
-      <th>Company website</th>
-      <th>Company phone</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @landsurveyors.each do |landsurveyor| %>
-      <tr>
-        <td><%= landsurveyor.company_name %></td>
-        <td><%= landsurveyor.company_description %></td>
-        <td><%= landsurveyor.address %></td>
-        <td><%= landsurveyor.city %></td>
-        <td><%= landsurveyor.zipcode %></td>
-        <td><%= landsurveyor.contact_name %></td>
-        <td><%= landsurveyor.company_website %></td>
-        <td><%= landsurveyor.company_phone %></td>
-        <td><%= link_to 'Show', landsurveyor %></td>
-        <td><%= link_to 'Edit', edit_landsurveyor_path(landsurveyor) %></td>
-        <td><%= link_to 'Destroy', landsurveyor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+  <div class="left">
+  <%= t('searchservice_html') %>
+   <%= form_tag search_landsurveyors_path, method: :get do %>
+          <p>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
+        <br>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
+      </p>
+    </div>
+  <% end %>
+
+<div class="thumbnail">
+  <div class="center"> 
+    <div class="row">
+     <% @landsurveyors.each do |landsurveyor| %>
+      <div class="col-md-3">
+      <div class="thumbnail">
+        <%= link_to image_tag(landsurveyor.image.url), landsurveyor %>
+        <div class="caption">
+          <h4><strong><%= landsurveyor.company_name %></strong></h4>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
+            <%= link_to landsurveyor.company_website, landsurveyor.company_website %><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
+            <%= landsurveyor.company_phone %><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
+           <%= landsurveyor.address %><br> 
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= landsurveyor.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= landsurveyor.zipcode %><br>
+           <br>
+           
+           <td><%= link_to 'Show', landsurveyor, class: "btn btn-success" %></td>
+        
+        <td><%= link_to 'Edit', edit_landsurveyor_path(landsurveyor), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', landsurveyor, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
+
+  </div>
+</div> 
+
 
 <br>
+<br>
 
-<%= link_to 'New Landsurveyor', new_landsurveyor_path %>
+
+<%= link_to t('add_service'), new_landsurveyor_path, class: "btn btn-success" %>
+
+
