--- a/app/views/lawyers/edit.html.erb
+++ b/app/views/lawyers/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing lawyer</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_lawyertitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @lawyer %> |
-<%= link_to 'Back', lawyers_path %>
+<%= link_to t('back'), lawyers_path %>
