--- a/app/views/lawyers/index.html.erb
+++ b/app/views/lawyers/index.html.erb
@@ -1,41 +1,56 @@
-<h1>Listing lawyers</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_lawyertitle_html') %>
+  
+ </div>
+ </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Company description</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Zipcode</th>
-      <th>Contact name</th>
-      <th>Company website</th>
-      <th>Company phone</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="left">
+  <%= t('searchservice_html') %>
+   <%= form_tag search_lawyers_path, method: :get do %>
+          <p>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
+        <br>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
+      </p>
+    </div>
+  <% end %>
 
-  <tbody>
-    <% @lawyers.each do |lawyer| %>
-      <tr>
-        <td><%= lawyer.company_name %></td>
-        <td><%= lawyer.company_description %></td>
-        <td><%= lawyer.address %></td>
-        <td><%= lawyer.city %></td>
-        <td><%= lawyer.zipcode %></td>
-        <td><%= lawyer.contact_name %></td>
-        <td><%= lawyer.company_website %></td>
-        <td><%= lawyer.company_phone %></td>
-        <td><%= lawyer.email %></td>
-        <td><%= link_to 'Show', lawyer %></td>
-        <td><%= link_to 'Edit', edit_lawyer_path(lawyer) %></td>
-        <td><%= link_to 'Destroy', lawyer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="thumbnail">
+  <div class="center"> 
+    <div class="row">
+     <% @lawyers.each do |lawyer| %>
+      <div class="col-md-3">
+      <div class="thumbnail">
+        <%= link_to image_tag(lawyer.image.url), lawyer %>
+        <div class="caption">
+          <h4><strong><%= lawyer.company_name %></strong></h4>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
+            <%= link_to lawyer.company_website, lawyer.company_website %><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
+            <%= lawyer.company_phone %><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
+           <%= lawyer.address %><br> 
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= lawyer.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= lawyer.zipcode %><br>
+           <br>
+           
+           <td><%= link_to 'Show', lawyer, class: "btn btn-success" %></td>
+        
+        <td><%= link_to 'Edit', edit_lawyer_path(lawyer), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', lawyer, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
+
+  </div>
+</div> 
+
 
 <br>
+<br>
 
-<%= link_to 'New Lawyer', new_lawyer_path %>
+
+<%= link_to t('add_service'), new_lawyer_path, class: "btn btn-success" %>
