--- a/app/views/lawyers/new.html.erb
+++ b/app/views/lawyers/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New lawyer</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_lawyertitle_html') %>
+  
+ </div>
+ </div>
+
 
 <%= render 'form' %>
 
-<%= link_to 'Back', lawyers_path %>
+<%= link_to t('back'), lawyers_path %>
