--- a/app/views/molds/index.html.erb
+++ b/app/views/molds/index.html.erb
@@ -1,39 +1,56 @@
-<h1>Listing molds</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_moldtitle_html') %>
+  
+ </div>
+ </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Company description</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Zipcode</th>
-      <th>Contact name</th>
-      <th>Company website</th>
-      <th>Company phone</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+ <div class="left">
+  <%= t('searchservice_html') %>
+   <%= form_tag search_molds_path, method: :get do %>
+          <p>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
+        <br>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
+      </p>
+    </div>
+  <% end %>
 
-  <tbody>
-    <% @molds.each do |mold| %>
-      <tr>
-        <td><%= mold.company_name %></td>
-        <td><%= mold.company_description %></td>
-        <td><%= mold.address %></td>
-        <td><%= mold.city %></td>
-        <td><%= mold.zipcode %></td>
-        <td><%= mold.contact_name %></td>
-        <td><%= mold.company_website %></td>
-        <td><%= mold.company_phone %></td>
-        <td><%= link_to 'Show', mold %></td>
-        <td><%= link_to 'Edit', edit_mold_path(mold) %></td>
-        <td><%= link_to 'Destroy', mold, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="thumbnail">
+  <div class="center"> 
+    <div class="row">
+     <% @molds.each do |mold| %>
+      <div class="col-md-3">
+      <div class="thumbnail">
+        <%= link_to image_tag(mold.image.url), mold %>
+        <div class="caption">
+          <h4><strong><%= mold.company_name %></strong></h4>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
+            <%= link_to mold.company_website, mold.company_website %><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
+            <%= mold.company_phone %><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
+           <%= mold.address %><br> 
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= mold.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= mold.zipcode %><br>
+           <br>
+           
+           <td><%= link_to 'Show', mold, class: "btn btn-success" %></td>
+        
+        <td><%= link_to 'Edit', edit_mold_path(mold), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', mold, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
+
+  </div>
+</div> 
+
 
 <br>
+<br>
 
-<%= link_to 'New Mold', new_mold_path %>
+
+<%= link_to t('add_service'), new_mold_path, class: "btn btn-success" %>
