--- a/app/views/molds/new.html.erb
+++ b/app/views/molds/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New mold</h1>
-
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_moldtitle_html') %>
+  
+ </div>
+ </div>
+ <br>
 <%= render 'form' %>
 
-<%= link_to 'Back', molds_path %>
+<%= link_to t('back'), molds_path %>
