--- a/app/views/mortgages/edit.html.erb
+++ b/app/views/mortgages/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing mortgage</h1>
-
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_mortgagetitle_html') %>
+  
+ </div>
+ </div>
+ <br>
 <%= render 'form' %>
 
 <%= link_to 'Show', @mortgage %> |
-<%= link_to 'Back', mortgages_path %>
+<%= link_to t('back'), mortgages_path %>
