--- a/app/views/mortgages/new.html.erb
+++ b/app/views/mortgages/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New mortgage</h1>
-
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_mortgagetitle_html') %>
+  
+ </div>
+ </div>
+ <br>
 <%= render 'form' %>
 
-<%= link_to 'Back', mortgages_path %>
+<%= link_to t('back'), mortgages_path %>
