--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -1,25 +1,57 @@
-<h1>Listing subscriptions</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_subscriptiontitle_html') %>
+  
+ </div>
+ </div>
+ <br>
+ <br>
 
-<table>
-  <thead>
+<table class="table table-striped table-bordered">
+  <tr>
+    <%= t('companynamesubscription_html') %>
+    <%= t('companysitesubscription_html') %>
+    <%= t('addresssubscription_html') %>
+    <%= t('citysubscription_html') %>
+    <%= t('zipcodesubscription_html') %>
+    <%= t('phonesubscription_html') %>
+    <%= t('actionsubscription_html') %>
+  </tr>
+
+  <% @subscriptions.each do |subscription| %>
     <tr>
-      <th>Email</th>
-      <th colspan="3"></th>
+      <strong><td><%= subscription.company_name %></td></strong>
+      <td><%= link_to subscription.website, subscription.website %></td>
+      <td><%= subscription.address %></td>
+      <td><%= subscription.city %></td>
+      <td><%= subscription.zipcode %></td>
+      <td><%= subscription.phone %></td>
+      <td>
+        <div class="btn-group">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+            Action <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to "View", subscription, class: "btn btn-link" %></li>
+            <li><%= link_to "Edit", edit_subscription_path(subscription), class: "btn btn-link" %></li>
+            <li><%= link_to 'Destroy', subscription, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-link" %></li>
+          </ul>
+        </div>
+      </td>
     </tr>
-  </thead>
-
-  <tbody>
-    <% @subscriptions.each do |subscription| %>
-      <tr>
-        <td><%= subscription.email %></td>
-        <td><%= link_to 'Show', subscription %></td>
-        <td><%= link_to 'Edit', edit_subscription_path(subscription) %></td>
-        <td><%= link_to 'Destroy', subscription, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-        <%= link_to 'Subscribe', new_subscription_path %>
-    <% end %>
-  </tbody>
+  <% end %>
 </table>
+
+<br>
+   
+
+<br>
+<br>
+
+<div class="left">
+
+<%= link_to t('add_subscription'), new_subscription_path, class: "btn btn-success" %>
+</div>
 
 <br>
 
