--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -77,7 +77,7 @@
     <div class="row">
       <div class="col-md-4">
     <%= f.label :name, "PLEASE SELECT A PLAN" %><br>
-    <%= f.select :name, options_for_select([["Basic Advertising Plan $49.99","Basic"],["Gold Advertising Plan $99.99", "Gold"], ["Discount Gold Advertising Plan $59.99", "GoldDiscount"]]), class: "form-control" %><br>
+    <%= f.select :name, options_for_select([["Basic Advertising Plan C$49.99","Basic"],["Gold Advertising Plan C$99.99", "Gold"], ["Discount Gold Advertising Plan C$59.99", "GoldDiscount"]]), class: "form-control" %><br>
     </div>
      <div class="col-md-4">
       <%= label_tag :nil, "Ontario's Only Seller ID" %><br>
