--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -28,13 +28,15 @@
       <td><%= subscription.phone %></td>
       <td>
         <div class="btn-group">
-          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+          <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
             Action <span class="caret"></span>
           </button>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to "View", subscription, class: "btn btn-link" %></li>
             <li><%= link_to "Edit", edit_subscription_path(subscription), class: "btn btn-link" %></li>
+            <% if user_signed_in? && current_user.admin? %>
             <li><%= link_to 'Destroy', subscription, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-link" %></li>
+            <% end %>
           </ul>
         </div>
       </td>
