--- a/app/views/airconditioners/index.html.erb
+++ b/app/views/airconditioners/index.html.erb
@@ -51,7 +51,7 @@
 
 <br>
 <br>
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_airconditioner_path, class: "btn btn-success" %>
-
+<% end %>
  
