--- a/app/views/asphalts/search.html.erb
+++ b/app/views/asphalts/search.html.erb
@@ -1,27 +1,27 @@
-<h4><strong>Search Results:</strong></h4><br>
+<%= t('searchresults_html') %>
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
-      <% @asphalts.each do |asphalt| %>
+     <% @asphalts.each do |asphalt| %>
       <div class="col-md-3">
       <div class="thumbnail">
         <%= link_to image_tag(asphalt.image.url), asphalt %>
         <div class="caption">
           <h4><strong><%= asphalt.company_name %></strong></h4>
-          <strong><th>Company Website: </th></strong><br>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to asphalt.company_website, asphalt.company_website %><br>
-            <strong><th>Phone Number: </th></strong><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= asphalt.company_phone %><br>
-           <strong><th>Address: </th></strong><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= asphalt.address %><br> 
-           <strong><th>City: </th></strong><%= asphalt.city %><br>
-           <strong><th>Zipcode: </th></strong><br><%= asphalt.zipcode %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= asphalt.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= asphalt.zipcode %><br>
            <br>
            
-           <td><%= link_to 'Show', asphalt, class: "btn btn-warning" %></td>
+           <td><%= link_to 'Show', asphalt, class: "btn btn-success" %></td>
         
-        <td><%= link_to 'Edit', edit_asphalt_path(asphalt), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', asphalt, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %></td>
+        <td><%= link_to 'Edit', edit_asphalt_path(asphalt), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', asphalt, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         </div>
       </div>
     </div>
@@ -29,14 +29,13 @@
     </div>
 
   </div>
-</div>   
+</div>
    
 
 <br>
 <br>
 
-
-<%= link_to 'Back', asphalts_path, class: "btn btn-link" %>
+<%= link_to t('back'), asphalts_path, class: "btn btn-link" %>
 
 
 
