--- a/app/views/countertops/index.html.erb
+++ b/app/views/countertops/index.html.erb
@@ -47,6 +47,7 @@
 
   </div>
 </div>  
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_countertop_path, class: "btn btn-success" %>
+<% end %>
 
