--- a/app/views/customcabinets/index.html.erb
+++ b/app/views/customcabinets/index.html.erb
@@ -47,5 +47,6 @@
 
   </div>
 </div>  
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_customcabinet_path, class: "btn btn-success" %>
+<% end %>
