--- a/app/views/hardmoneys/index.html.erb
+++ b/app/views/hardmoneys/index.html.erb
@@ -52,6 +52,6 @@
 <br>
 <br>
 
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_hardmoney_path, class: "btn btn-success" %>
-
+<% end %>
