--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -62,7 +62,7 @@
             
              <%= image_tag("builder.jpg", :size => "100x100", :alt => "CashBuyer", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), cashbuyers_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -73,7 +73,7 @@
             </div>
              <%= image_tag("buildingmaterial.jpg", :size => "100x100", :alt => "CustomCabinets", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), customcabinets_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -107,7 +107,7 @@
             </div>
              <%= image_tag("cement.jpg", :size => "100x100", :alt => "CustomCabinets", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), customcabinets_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -121,7 +121,7 @@
             </div>
              <%= image_tag("cleaning.png", :size => "100x100", :alt => "Countertop", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), countertops_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -142,7 +142,7 @@
             </div>
              <%= image_tag("removal.png", :size => "100x100", :alt => "Drywall", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), drywalls_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -156,7 +156,7 @@
             </div>
              <%= image_tag("fences.png", :size => "100x100", :alt => "Countertop", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), countertops_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -177,7 +177,7 @@
             </div>
              <%= image_tag("electrician.png", :size => "100x100", :alt => "Framing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), framings_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -190,7 +190,7 @@
             </div>
              <%= image_tag("eavestrouphing.jpg", :size => "100x100", :alt => "Countertop", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), countertops_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -201,7 +201,7 @@
             </div>
              <%= image_tag("exterior.png", :size => "100x100", :alt => "Drywall", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), drywalls_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -212,7 +212,7 @@
             </div>
              <%= image_tag("engineer.jpg", :size => "100x100", :alt => "Framing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), framings_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -248,7 +248,7 @@
             </div>
              <%= image_tag("foundationrepair.png", :size => "100x100", :alt => "Homeinspector", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), homeinspectors_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -261,7 +261,7 @@
             </div>
              <%= image_tag("fireplace.png", :size => "100x100", :alt => "Flooring", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), floorings_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -310,7 +310,7 @@
             </div>
              <%= image_tag("home.jpg", :size => "100x100", :alt => "InteriorDesing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), hardmoneys_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -346,7 +346,7 @@
             </div>
              <%= image_tag("wood.jpg", :size => "100x100", :alt => "InteriorDesing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), interiordesigners_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -357,7 +357,7 @@
             </div>
             <%= image_tag("lighting.jpg", :size => "100x100", :alt => "Insulation", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), interiordesigners_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -542,7 +542,7 @@
             </div>
             <%= image_tag("realestatefirms.png", :size => "100x100", :alt => "Lawyers", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), real_estatefirms_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -555,7 +555,7 @@
             </div>
              <%= image_tag("rental.png", :size => "100x100", :alt => "Lawyers", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), rentalproperties_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -566,7 +566,7 @@
             </div>
               <%= image_tag("remodel.jpeg", :size => "100x100", :alt => "Lawyers", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -577,7 +577,7 @@
             </div>
              <%= image_tag("roofing.png", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), roofings_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -591,7 +591,7 @@
             </div>
              <%= image_tag("securitycompany.png", :size => "100x100", :alt => "Lawyers", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), securities_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -603,7 +603,7 @@
             
               <%= image_tag("septic.png", :size => "100x100", :alt => "Lawyers", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), septics_path, class: "btn btn-default", data: {no_turbolink: true} %>
             
         </div>
         </div>
@@ -615,7 +615,7 @@
             </div>
              <%= image_tag("windowstreatment.png", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), solarscreens_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -629,7 +629,7 @@
             </div>
               <%= image_tag("staging.png", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), stagings_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -640,7 +640,7 @@
             </div>
              <%= image_tag("soffit.png", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -651,7 +651,7 @@
             </div>
              <%= image_tag("poolspa.png", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-             <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+             <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -664,7 +664,7 @@
             </div>
               <%= image_tag("solar.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
             
         </div>
         </div>
@@ -676,7 +676,7 @@
             </div>
              <%= image_tag("senior.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -687,7 +687,7 @@
             </div>
              <%= image_tag("taxspecialist.png", :size => "140x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), taxspecialists_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
@@ -700,7 +700,7 @@
             </div>
              <%= image_tag("termiteinspector.png", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), termiteinspectors_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -711,7 +711,7 @@
             </div>
              <%= image_tag("titlecompany.png", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), titlecompanies_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -722,7 +722,7 @@
             </div>
              <%= image_tag("window.png", :size => "120x84", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), windows_path, class: "btn btn-default", data: {no_turbolink: true} %>
             
         </div>
         </div>
@@ -736,7 +736,7 @@
             </div>
               <%= image_tag("weatherproof.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), accountants_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), servicess_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
