--- a/app/views/poolrepairs/index.html.erb
+++ b/app/views/poolrepairs/index.html.erb
@@ -53,8 +53,9 @@
 <br>
 <br>
 
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_poolrepair_path, class: "btn btn-success" %>
+<% end %>
 
 
 
