--- a/app/views/privatebanks/index.html.erb
+++ b/app/views/privatebanks/index.html.erb
@@ -53,7 +53,7 @@
 <br>
 <br>
 
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_privatebank_path, class: "btn btn-success" %>
-
+<% end %>
 
