--- a/app/views/arquitects/index.html.erb
+++ b/app/views/arquitects/index.html.erb
@@ -48,5 +48,6 @@
   </div>
 </div>  
 
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_arquitect_path, class: "btn btn-success" %>
+<% end %>
