--- a/app/views/asphalts/edit.html.erb
+++ b/app/views/asphalts/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Asphalt Services</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_asphalttitle_html') %>
+  
+ </div>
+ </div>
+
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @asphalt, class: "btn btn-link" %> |
-<%= link_to 'Back', asphalts_path, class: "btn btn-link" %>
+<%= link_to t('back'), asphalts_path, class: "btn btn-link" %>
