--- a/app/views/asphalts/index.html.erb
+++ b/app/views/asphalts/index.html.erb
@@ -1,10 +1,17 @@
- <div class="left"> 
-<h4><strong>Find a New Asphalt Service</strong></h4>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_asphalttitle_html') %>
+  
+ </div>
+ </div>
+
+<div class="left"> 
+    <%= t('searchservice_html') %>
    <%= form_tag search_asphalts_path, method: :get do %>
           <p>
-        <%= text_field :search, params[:search], placeholder: "Enter a Location (City, Zipcode)",class: "form-control" %>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox') class: "form-control" %>
         <br>
-         <%= submit_tag "Search", name: nil ,class: "btn btn-warning" %>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
       </p>
     </div>
   <% end %>
@@ -14,26 +21,26 @@
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
-      <% @asphalts.each do |asphalt| %>
+    <% @asphalts.each do |asphalt| %>
       <div class="col-md-3">
       <div class="thumbnail">
         <%= link_to image_tag(asphalt.image.url), asphalt %>
         <div class="caption">
           <h4><strong><%= asphalt.company_name %></strong></h4>
-          <strong><th>Company Website: </th></strong><br>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to asphalt.company_website, asphalt.company_website %><br>
-            <strong><th>Phone Number: </th></strong><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= asphalt.company_phone %><br>
-           <strong><th>Address: </th></strong><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= asphalt.address %><br> 
-           <strong><th>City: </th></strong><%= asphalt.city %><br>
-           <strong><th>Zipcode: </th></strong><br><%= asphalt.zipcode %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= asphalt.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= asphalt.zipcode %><br>
            <br>
            
-           <td><%= link_to 'Show', asphalt, class: "btn btn-warning" %></td>
+           <td><%= link_to 'Show', asphalt, class: "btn btn-success" %></td>
         
-        <td><%= link_to 'Edit', edit_asphalt_path(asphalt), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', asphalt, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %></td>
+        <td><%= link_to 'Edit', edit_asphalt_path(asphalt), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', asphalt, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         </div>
       </div>
     </div>
@@ -46,8 +53,8 @@
 
 <br>
 <br>
-
-
-<%= link_to 'New Asphalt', new_asphalt_path, class: "btn btn-warning" %>
+<% if user_signed_in? && current_user.admin? %>
+<%= link_to t('add_service'), new_asphalt_path, class: "btn btn-success" %>
+<% end %>
 
 
