--- a/app/views/asphalts/new.html.erb
+++ b/app/views/asphalts/new.html.erb
@@ -1,8 +1,12 @@
-<h2><strong>Add a New Asphalts Service</strong></h2>
-<br>
-<br>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_asphalttitle_html') %>
+  
+ </div>
+ </div>
+
 
 
 <%= render 'form' %>
 
-<%= link_to 'Back', asphalts_path, class: "btn btn-link" %>
+<%= link_to t('back'), asphalts_path, class: "btn btn-link" %>
