--- a/app/views/asphalts/show.html.erb
+++ b/app/views/asphalts/show.html.erb
@@ -1,3 +1,4 @@
+
 <div class="row">
   <div class="col-md-6">
     <div class="thumbnail">
@@ -6,27 +7,27 @@
       <strong><%= @asphalt.company_name %></strong>
       <br>
       <br>
-      <strong>Company Website:</strong>  
+      <strong><%= label_tag :nil, t('servicecompanywebsite') %></strong>  
       <%= link_to @asphalt.company_website, @asphalt.company_website %><br>
       
       
-      <strong>Company contact name:</strong>  
+      <strong><%= label_tag :nil, t('companycontactname') %></strong>  
      <%= @asphalt.contact_name %>
      <br>
-      <strong>Company phone:</strong> 
+      <strong><%= label_tag :nil, t('companyservicephone') %></strong> 
      <%= @asphalt.company_phone %><br>
-     <strong>Address:</strong>  
+     <strong><%= label_tag :nil, t('servicecompanyaddress') %></strong>  
      <%= @asphalt.address %><br>
-      <strong>City:</strong>  
+      <strong><%= label_tag :nil, t('city') %></strong>  
      <%= @asphalt.city %><br>
-     <strong>Zipcode:</strong>  
+     <strong><%= label_tag :nil, t('zipcode') %></strong>  
      <%= @asphalt.zipcode %><br>
     </div>
      <br>
 
   </div>
   <div class="col-md-6">
-    <h5><strong>General Company Information:</strong></h5>
+    <h5><strong><%= label_tag :nil, t('generalcompany') %></strong></h5>
     <%= @asphalt.company_description %>
   </div>
 
@@ -34,7 +35,7 @@
 
   <div class ="col-md-12">
     <div class= "center">
-   <strong>Map View Location:</strong><br>
+   <strong><%= label_tag :nil, t('mapview') %></strong><br>
    <br>
 <iframe
   width="800"
@@ -49,7 +50,8 @@
 <br>  
  </div>
 
-<%= link_to 'Edit', edit_asphalt_path(@asphalt), class: "btn btn-link" %> |
-<%= link_to 'Back', asphalts_path, class: "btn btn-link" %>
 
+
+<%= link_to 'Edit', edit_asphalt_path(@asphalt), class: "btn btn-link" %> |
+<%= link_to t('back'), asphalts_path, class: "btn btn-link" %>
 
