--- a/app/views/generalcontractors/index.html.erb
+++ b/app/views/generalcontractors/index.html.erb
@@ -53,6 +53,6 @@
 <br>
 <br>
 
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_generalcontractor_path, class: "btn btn-success" %>
-
+<% end %>
