--- a/app/views/molds/index.html.erb
+++ b/app/views/molds/index.html.erb
@@ -52,5 +52,6 @@
 <br>
 <br>
 
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_mold_path, class: "btn btn-success" %>
+<% end %>
