--- a/app/views/realtors/index.html.erb
+++ b/app/views/realtors/index.html.erb
@@ -53,5 +53,7 @@
 <br>
 <br>
 
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_realtor_path, class: "btn btn-success" %>
+<% end %>
+
