--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -53,5 +53,6 @@
 <br>
 <br>
 
-
+<% if user_signed_in? && current_user.admin? %>
 <%= link_to t('add_service'), new_service_path, class: "btn btn-success" %>
+<% end %>
