--- a/app/views/arquitects/index.html.erb
+++ b/app/views/arquitects/index.html.erb
@@ -36,9 +36,10 @@
            <br>
            
            <td><%= link_to 'Show', arquitect, class: "btn btn-success" %></td>
-        
+        <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Edit', edit_arquitect_path(arquitect), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy', arquitect, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        <% end %>
         </div>
       </div>
     </div>
