--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="left">
-    <h2>Sign up to Florida's Only</h2>
+    <h2>Sign up to Ontario's Only</h2>
   </div>
 </div>
 <br>
