--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -740,7 +740,15 @@
         </div>
         </div>
         <div class="col-md-4 feature">
-        
+         <div class="panel">
+            <div class="panel-heading">
+                <%= t('appliance_html') %>
+                
+            </div>
+              <%= image_tag("weatherproof.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
+            <p></p>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+        </div>
         </div>
          <div class="col-md-4 feature">
        
