--- a/app/views/residentials/index.html.erb
+++ b/app/views/residentials/index.html.erb
@@ -76,6 +76,8 @@
                     <%= text_field_tag :half_bathrooms, params[:half_bathrooms], class: "form-control" %>
               </div>
             </div>
+          </div>
+          <div class= "row">
               <div class= "col-md-2">
                 <div class= "form-group">
                   <%= label_tag :Min_square_feet, t('minsqft') %><br>
@@ -101,6 +103,7 @@
                   <%= text_field_tag :max_price, params[:max_price], class: "form-control" %>
               </div>
             </div>
+          </div>
             </div>
           </div>
         </div>
