--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
 			<div class="col-sm-3">
 			<div class="left">
 			<h5 style="font-family:Calibri">
-				Copyright &copy; 2015 <strong>D&G Global LLC</strong><br>
+				Copyright &copy; 2015 <strong>D&G Global INC</strong><br>
 				All Rights Reserved 
 				<link><a href="/pages/termsofuse"><font color="white">Terms & Conditions</font></a></link>|<link><a href="/pages/privacypolicy"><font color="white">Privacy Policy</font></a></link></h5>
 		 	</div>
