--- a/app/views/airconditioners/_form.html.erb
+++ b/app/views/airconditioners/_form.html.erb
@@ -52,7 +52,7 @@
   
   
   <div class="col-md-4">
-    <%= f.submit "Create a New AC Service", class: "btn btn-warning" %>
+    <%= f.submit "Create a New Service", class: "btn btn-warning" %>
   </div>
   <br>
  
