--- a/app/views/accountants/_form.html.erb
+++ b/app/views/accountants/_form.html.erb
@@ -54,7 +54,7 @@
     <%= f.label :pictures %>  <%= f.file_field :image, class: "form-control" %><br><br>
     </div>
   <div class="col-md-4">
-    <%= f.submit "Create a New AC Service", class: "btn btn-warning" %>
+    <%= f.submit "Create a New Service", class: "btn btn-warning" %>
   </div>
   <br>
  
