--- a/app/views/floorings/_form.html.erb
+++ b/app/views/floorings/_form.html.erb
@@ -52,7 +52,7 @@
   
   
   <div class="col-md-4">
-    <%= f.submit "Create a Flooring Service", class: "btn btn-success" %>
+    <%= f.submit "Create a Service", class: "btn btn-success" %>
   </div>
   <br>
  
