--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@subscription) do |f| %>
+<%= form_for(@subscription,:html => { :multipart => true }) do |f|  %>
   <% if @subscription.errors.any? %>
     <div id="error_explanation" class="alert alert-danger alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
@@ -63,6 +63,9 @@
         <div class="col-md-4">
         <%= label_tag :nil, t('businessemail') %><br>
         <%= f.text_field :company_email, class: "form-control" %>
+        </div>
+        <div class="col-md-4">
+        <%= f.label :pictures %>  <%= f.file_field :image, class: "form-control" %><br><br>
         </div>
         <br>
         <br>
