--- a/app/views/subscriptions/show.html.erb
+++ b/app/views/subscriptions/show.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-6">
     <div class="thumbnail">
+      <%= image_tag @subscription.image.url %>
       <strong><%= @subscription.company_name %></strong>
       <br>
       <br>
