--- a/app/views/titlecompanies/_form.html.erb
+++ b/app/views/titlecompanies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@titlecompany) do |f| %>
+<%= form_for(@titlecompany,:html => { :multipart => true }) do |f| %>
   <% if @titlecompany.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@titlecompany.errors.count, "error") %> prohibited this titlecompany from being saved:</h2>
@@ -11,43 +11,52 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :company_name %><br>
-    <%= f.text_field :company_name %>
+  <div class="thumbnail">
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.label :company_name %><br>
+      <%= f.text_field :company_name, class: "form-control"  %><br>
+    </div>
+    
+    <div class="col-md-4">
+      <%= f.label :company_description %><br>
+      <%= f.text_area :company_description, class: "form-control"  %><br>
+    </div>
+    <div class="col-md-4">
+      <%= f.label :address %><br>
+      <%= f.text_area :address, class: "form-control"  %><br>
+    </div>
+    <div class="col-md-4">
+      <%= f.label :city %><br>
+      <%= f.text_field :city, class: "form-control"  %><br>
+    </div>
+    <div class="col-md-4">
+      <%= f.label :zipcode %><br>
+      <%= f.text_field :zipcode, class: "form-control"  %><br>
+    </div>
+    <div class="col-md-4">
+       <%= f.label :contact_name %><br>
+       <%= f.text_field :contact_name, class: "form-control"  %><br>
+    </div>
+    <div class="col-md-4">
+      <%= f.label :company_website %><br>
+      <%= f.text_field :company_website, class: "form-control"  %><br>
+    </div>
+    <div class="col-md-4">
+      <%= f.label :company_phone %><br>
+      <%= f.text_field :company_phone, class: "form-control"  %><br>
+    </div>
+    <div class="col-md-4">
+    <%= f.label :pictures %>  <%= f.file_field :image, class: "form-control" %><br><br>
+    </div>
+  
+  
+  <div class="col-md-4">
+    <%= f.submit "Create a Service", class: "btn btn-success" %>
   </div>
-  <div class="field">
-    <%= f.label :company_description %><br>
-    <%= f.text_area :company_description %>
-  </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_area :address %>
-  </div>
-  <div class="field">
-    <%= f.label :city %><br>
-    <%= f.text_field :city %>
-  </div>
-  <div class="field">
-    <%= f.label :zipcode %><br>
-    <%= f.number_field :zipcode %>
-  </div>
-  <div class="field">
-    <%= f.label :contact_name %><br>
-    <%= f.text_field :contact_name %>
-  </div>
-  <div class="field">
-    <%= f.label :company_website %><br>
-    <%= f.text_field :company_website %>
-  </div>
-  <div class="field">
-    <%= f.label :company_phone %><br>
-    <%= f.text_field :company_phone %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <br>
+ 
 <% end %>
+ </div>
+</div>
+
