--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,7 +16,7 @@
 				<%= t('contact_html') %>
 				
 				<link><a href="/pages/home"><font color="white">customers@dngglobal.ca</font></a></link>
-				<h5 style="font-family:Tahoma" ><font size="4"><strong>1-844-DG-GLOB</strong></font></h5>
+				<h5 style="font-family:Tahoma" ><font size="4"><strong>1-844-DG-GLOBE</strong></font></h5>
 				</div>
 			</div>
 				<div class="col-sm-3">
