--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -42,6 +42,43 @@
         </div>
 </div>
 <div class="row" id="features">
+    <div class="col-md-4 feature">
+        <div class="panel">
+            <div class="panel-heading">
+                <%= t('wood_html') %>
+                
+            </div>
+             <%= image_tag("wood.jpg", :size => "100x100", :alt => "InteriorDesing", :style =>"margin-right:25px; margin-top:10px;" ) %>
+            <p></p>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+        </div>
+        </div>
+        <div class="col-md-4 feature">
+         <div class="panel">
+            <div class="panel-heading">
+                <%= t('appliance_html') %>
+                
+            </div>
+              <%= image_tag("appliancesale.png", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
+            <p></p>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+        </div>
+        </div>
+         <div class="col-md-4 feature">
+             <div class="panel">
+            <div class="panel-heading">
+                <%= t('appliancerepair_html') %>
+                
+            </div>
+              <%= image_tag("appliancerepair.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
+            <p></p>
+            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
+        </div>
+        </div>
+        </div>
+</div>
+
+<div class="row" id="features">
         <div class="col-md-4 feature">
         <div class="panel">
             <div class="panel-heading">
@@ -341,10 +378,10 @@
         <div class="col-md-4 feature">
         <div class="panel">
             <div class="panel-heading">
-                <%= t('wood_html') %>
+                <%= t('weather_html') %>
                 
             </div>
-             <%= image_tag("wood.jpg", :size => "100x100", :alt => "InteriorDesing", :style =>"margin-right:25px; margin-top:10px;" ) %>
+              <%= image_tag("weatherproof.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
             <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
@@ -725,32 +762,5 @@
             <%= link_to t('searchservices'), windows_path, class: "btn btn-default", data: {no_turbolink: true} %>
             
         </div>
-        </div>
-</div>
-<div class="row" id="features">
-        <div class="col-md-4 feature">
-        <div class="panel">
-            <div class="panel-heading">
-                <%= t('weather_html') %>
-                
-            </div>
-              <%= image_tag("weatherproof.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
-            <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
-        </div>
-        </div>
-        <div class="col-md-4 feature">
-         <div class="panel">
-            <div class="panel-heading">
-                <%= t('appliance_html') %>
-                
-            </div>
-              <%= image_tag("weatherproof.jpg", :size => "100x100", :alt => "Septics", :style =>"margin-right:25px; margin-top:10px;" ) %>
-            <p></p>
-            <%= link_to t('searchservices'), services_path, class: "btn btn-default", data: {no_turbolink: true} %>
-        </div>
-        </div>
-         <div class="col-md-4 feature">
-       
         </div>
 </div>
