--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -67,6 +67,10 @@
         <div class="col-md-4">
         <%= f.label :pictures %>  <%= f.file_field :image, class: "form-control" %><br><br>
         </div>
+         <div class="col-md-4">
+        <%= label_tag :nil, t('description') %><br>
+        <%= f.text_area :description, class: "form-control" %>
+        </div>
         <br>
         <br>
     </div>
