--- a/app/views/pages/membership.html.erb
+++ b/app/views/pages/membership.html.erb
@@ -5,6 +5,9 @@
 <div class="row" id="featuresHeading">
     <div class="col-12">
       <%= t('adtitle_html') %>
+    </div><br>
+     <div class="col-12">
+      <%= t('addtitle_html') %>
     </div>
 </div>
 <div class="row" id="features">
