--- a/app/views/arquitects/index.html.erb
+++ b/app/views/arquitects/index.html.erb
@@ -26,7 +26,7 @@
         <div class="caption">
           <h4><strong><%= arquitect.company_name %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
-            <%= link_to arquitect.company_website, arquitect.company_website %><br>
+            <%= link_to arquitect.company_website, arquitect.company_website, :target => "_blank" %><br>
             <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= arquitect.company_phone %><br>
            <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
