--- a/app/views/arquitects/search.html.erb
+++ b/app/views/arquitects/search.html.erb
@@ -1,3 +1,10 @@
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_architecttitle_html') %>
+  
+ </div>
+ </div>
+
 <%= t('searchresults_html') %>
 <div class="thumbnail">
   <div class="center"> 
@@ -9,7 +16,7 @@
         <div class="caption">
           <h4><strong><%= arquitect.company_name %></strong></h4>
           <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
-            <%= link_to arquitect.company_website, arquitect.company_website %><br>
+            <%= link_to arquitect.company_website, arquitect.company_website, :target => "_blank" %><br>
             <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= arquitect.company_phone %><br>
            <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
